--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="quick-access">
                     <h3>وصول سريع</h3>
                     <div class="quick-links">
-                        <a href="#" class="quick-link" onclick="showNotificationAndForm()">
+                        <<a href="#" class="quick-link" onclick="showNotificationAndForm()">
     <i class="fas fa-user-graduate"></i>
     <span>تقديم طلب جديد</span>
                         </a>
