--- a/index.html
+++ b/index.html
@@ -134,9 +134,19 @@
                 <div class="quick-access">
                     <h3>وصول سريع</h3>
                     <div class="quick-links">
-                        <<a href="#" class="quick-link" onclick="showNotificationAndForm()">
+                        <a href="#" class="quick-link" onclick="showNotificationAndForm()">
     <i class="fas fa-user-graduate"></i>
     <span>تقديم طلب جديد</span>
+</a>
+
+<script>
+// ربط النموذج بالرابط "تقديم طلب جديد"
+function showNotificationAndForm() {
+  const formWrap = document.getElementById('registrationForm');
+  formWrap.style.display = 'block';
+  formWrap.scrollIntoView({ behavior: 'smooth' });
+}
+</script>
                         </a>
                         </a>
                         <a href="#" class="quick-link" onclick="showAcademicNumberInquiry()">
